애플리케이션 기본 설정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,22 @@
+# default
+server.port=8080
+server.servlet.context-path=/
+
+# thymeleaf
+spring.thymeleaf.cache=false
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+
+# static path
+spring.mvc.static-path-pattern=/assets/**
+
+# jdbc datasource
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.url=jdbc:mariadb://bigdata.cbkven5y1q7p.ap-northeast-2.rds.amazonaws.com:3306/bigdata
+spring.datasource.username=bigdata
+spring.datasource.password=Bigdata_2023
+
+# devtools
+spring.devtools.livereload.enabled=true
+
 
