애플리케이션 추가 설정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,4 +19,6 @@ spring.datasource.password=Bigdata_2023
 # devtools
 spring.devtools.livereload.enabled=true
 
+# mybatis
+mybatis.mapper-locations=classpath:mybatis/mapper/**/**.xml
 
