회원가입 : mybatis 설정 추가 (패키지 별칭)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,5 +20,5 @@ spring.datasource.password=Bigdata_2023
 spring.devtools.livereload.enabled=true
 
 # mybatis
-mybatis.mapper-locations=classpath:mybatis/mapper/**/**.xml
-
+mybatis.mapper-locations=classpath:mybatis/mapper/**.xml
+mybatis.type-aliases-package=taeeun.hello.boot.spring5boot.model
