아이디 중복 검사 : mybatis 로그 설정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.mvc.static-path-pattern=/assets/**
 # jdbc datasource
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.url=jdbc:mariadb://bigdata.cbkven5y1q7p.ap-northeast-2.rds.amazonaws.com:3306/bigdata
-spring.datasource.username=bigdata
+spring.datasource.username=admin
 spring.datasource.password=Bigdata_2023
 
 # devtools
@@ -22,3 +22,10 @@ spring.devtools.livereload.enabled=true
 # mybatis
 mybatis.mapper-locations=classpath:mybatis/mapper/**.xml
 mybatis.type-aliases-package=taeeun.hello.boot.spring5boot.model
+
+#logging
+# ?? ?? : logging.level.???????? = ????
+logging.level.taeeun.hello.boot.spring5boot.mybatis=TRACE
+
+
+
