로깅 관련 한글 주석 - 영어로 변경

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,7 +24,7 @@ mybatis.mapper-locations=classpath:mybatis/mapper/**.xml
 mybatis.type-aliases-package=taeeun.hello.boot.spring5boot.model
 
 #logging
-# ?? ?? : logging.level.???????? = ????
+# mybatis log : logging.level.'packageName'='LogLevel'
 logging.level.taeeun.hello.boot.spring5boot.mybatis=TRACE
 
 
