자료실 - 파일업로드 설정 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,4 +28,10 @@ mybatis.type-aliases-package=taeeun.hello.boot.spring5boot.model
 logging.level.taeeun.hello.boot.spring5boot.mybatis=TRACE
 
 
+# upload file
+saveDir = C:/Java/bootupload/
+spring.servlet.multipart.max-file-size=1MB
+spring.servlet.multipart.max-request-size=10MB
+
+
 
