--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,4 +34,7 @@ spring.servlet.multipart.max-file-size=1MB
 spring.servlet.multipart.max-request-size=10MB
 
 
+#upload gallery
+saveImgDir = C:/Java/nginx-1.24.0/html/cdn
+
 
